tests/snapshots/run_wpt_conformance__coreml_dequantizeLinear_int8_0D_constant_tensor_with_float32_0D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear int8 0D constant tensor with float32 0D scale, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type dequantize: For operator: dequantize, when `scale` and `zero_point`(if provided) are vectors, `axis` should be present.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: i8[] @bytes([123]);
    operand_1: f32[] @bytes([42, 101, 143, 63]);
    operand_2: i8[] @bytes([3]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(operand_0, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
