tests/snapshots/run_wpt_conformance__coreml_div_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
div.https.any.js div float16 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983274325_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([142, 83, 111, 213, 224, 204, 147, 203, 186, 74, 174, 81, 163, 83, 108, 84, 210, 207, 3, 83, 224, 80, 141, 194, 9, 80, 90, 195, 135, 85, 47, 75, 249, 74, 55, 76, 209, 68, 133, 81, 139, 202, 146, 81, 93, 208, 162, 212]);
    operand_1: f16[24] @bytes([240, 213, 218, 83, 85, 213, 67, 212, 247, 84, 75, 212, 231, 213, 0, 201, 148, 76, 63, 195, 245, 197, 152, 85, 239, 85, 240, 212, 254, 212, 176, 84, 119, 78, 185, 85, 26, 85, 7, 82, 236, 83, 80, 73, 196, 81, 212, 84]);
  }

  nodes {
    [output] = div(operand_0, operand_1, label="");
  }

  outputs { output; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983274325_0.mlmodelc/model.mil:7:12: Storage Reader expects file format version 2..
