tests/snapshots/run_wpt_conformance__coreml_div_float16_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
div.https.any.js div float16 5D tensors, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'inputB' must be of rank 4, instead got a multi-array value of rank 5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[2, 2, 1, 2, 3];
    inputB: f16[2, 2, 1, 2, 3];
  }

  nodes {
    [output] = div(inputA, inputB, label="");
  }

  outputs { output; }
}
