tests/snapshots/run_wpt_conformance__coreml_elu_float16_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
elu.https.any.js elu float16 2D tensor default options, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'eluInput' must be of rank 1, instead got a multi-array value of rank 2.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    eluInput: f16[4, 6];
  }

  nodes {
    [eluOutput] = elu(eluInput, alpha=1.0, label="");
  }

  outputs { eluOutput; }
}
