tests/snapshots/run_wpt_conformance__coreml_elu_float32_1D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
elu.https.any.js elu float32 1D tensor default options, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'eluInput' must be of rank 2, instead got a multi-array value of rank 1.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    eluInput: f32[24];
  }

  nodes {
    [eluOutput] = elu(eluInput, alpha=1.0, label="");
  }

  outputs { eluOutput; }
}
