tests/snapshots/run_wpt_conformance__coreml_elu_float32_4D_tensor_positive_options_alpha.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
elu.https.any.js elu float32 4D tensor positive options.alpha, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'eluInput' must be of rank 5, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    eluInput: f32[1, 2, 3, 4];
  }

  nodes {
    [eluOutput] = elu(eluInput, alpha=0.3607245505146506, label="");
  }

  outputs { eluOutput; }
}
